手机横竖屏不支持UI自适应，始终为PhoneUI模式

--- a/Client/Dt.Base/Structure/Tools/SysTrace.xaml
+++ b/Client/Dt.Base/Structure/Tools/SysTrace.xaml
@@ -101,6 +101,7 @@
                             <a:Mi ID="存根代码" Icon="链接" Click="OnStub" />
                             <a:Mi ID="页面类型" Icon="文件" Click="OnPageType" />
                             <a:Mi ID="安装路径" Icon="文件夹" Click="OnInstallPath" />
+                            <a:Mi ID="操作系统" Icon="服务器" Click="OnHostOS" />
                         </a:Menu>
                     </Grid>
                     <TextBox x:Name="_tb"
