--- a/Client/Dt.App/Home/DefaultLogin.xaml
+++ b/Client/Dt.App/Home/DefaultLogin.xaml
@@ -28,7 +28,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Image Source="ms-appx:///Assets/logo.png" Height="50" Width="50" Stretch="None" />
-            <TextBlock x:Name="_tbTitle" FontSize="{StaticResource 大字号}" Margin="5,8,5,8" Grid.Column="1"/>
+            <TextBlock x:Name="_tbTitle" FontSize="{StaticResource 特大字}" Margin="5,8,5,8" Grid.Column="1"/>
         </Grid>
 
         <Grid x:Name="InfoPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed" Grid.Row="2">
@@ -56,6 +56,6 @@
         </StackPanel>
 
         <!-- 系统描述 -->
-        <TextBlock x:Name="_tbDesc" FontSize="{StaticResource 小字号}" TextAlignment="Center" TextWrapping="Wrap" Grid.Row="3" />
+        <TextBlock x:Name="_tbDesc" FontSize="{StaticResource 小字}" TextAlignment="Center" TextWrapping="Wrap" Grid.Row="3" />
     </Grid>
 </Page>
