--- a/Client/Dt.Base/Themes/Styles/Base.xaml
+++ b/Client/Dt.Base/Themes/Styles/Base.xaml
@@ -51,7 +51,9 @@
 
                                 <TextBlock Text="{TemplateBinding Desc}"
                                            Visibility="{Binding Text, Converter={StaticResource CvTextToVisible}, RelativeSource={RelativeSource Self}}"
-                                           Style="{StaticResource 小字}"
+                                           FontSize="{StaticResource 小字}"
+                                           TextTrimming="CharacterEllipsis"
+                                           TextWrapping="Wrap"
                                            Foreground="{StaticResource 深灰边框}"
                                            VerticalAlignment="Top"
                                            HorizontalAlignment="Left"/>
